deploy/k8s/popop-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sub2api
  namespace: sub2api
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/part-of: sub2api
spec:
  type: NodePort
  selector:
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
